# Python_Interpreter

./: .gitignore  CMakeLists.txt  README.md  frame.cpp  frame.h  interpreter.cpp  interpreter.h  main.cpp  opcode.h
file_types/: bool.cpp  bool.h  builtins.cpp  builtins.h  double.cpp  double.h  file_types.cpp  file_types.h  int.cpp  int.h  iterator.cpp  iterator.h  list.cpp  list.h  pycodeobject.cpp  pycodeobject.h  pyfunction.cpp  pyfunction.h  pyobject.cpp  pyobject.h  str.cpp  str.h  string.cpp  string.h  type_funcs.cpp  type_funcs.h
parser/: a.py  a.py.cjson  arithmetics.py.cjson  builtin_functions.py.cjson  builtin_methods.py.cjson  for.py.cjson  functions.py.cjson  lists.py.cjson  parse_py_to_json.py  while.py.cjson
tests/: arithmetics.py  builtin_functions.py  builtin_methods.py  for.py  functions.py  while.py
